# partev

./: .gitignore  CMakeLists.txt  README.md  info.md
src/: gene.cpp  gene.h  main.cpp  particle.cpp  particle.h  range.cpp  range.h  utils.cpp  utils.h  world.h
